--- a/donationSite/views/index.pug
+++ b/donationSite/views/index.pug
@@ -1,5 +1,132 @@
 extends layout
 
-block content
-  h1= title
-  p Welcome to #{title}
+block main_content
+  h1 Corporate Donation Matching
+  table.table.table-striped.table-bordered.table-responsive
+    thead.thead-light
+      tr
+        th Company
+        th Limit 
+        th Ratio
+    tbody
+      tr 
+        td Bank of America
+        td $5000  
+        td 1:1  
+      tr
+        td American Express 
+        td $8000
+        td 2:1
+      tr 
+        td Deloitte 
+        td $32,500
+        td 1:1
+      tr 
+        td Grainger 
+        td $2,500
+        td 3:1
+      tr
+        td Johnson & Johnson
+        td $20000
+        td 2:1
+      tr 
+        td Bank of America
+        td $5000  
+        td 1:1  
+      tr
+        td American Express 
+        td $8000
+        td 2:1
+      tr 
+        td Deloitte 
+        td $32,500
+        td 1:1
+      tr 
+        td Grainger 
+        td $2,500
+        td 3:1
+      tr
+        td Johnson & Johnson
+        td $20000
+        td 2:1
+      tr 
+        td Bank of America
+        td $5000  
+        td 1:1  
+      tr
+        td American Express 
+        td $8000
+        td 2:1
+      tr 
+        td Deloitte 
+        td $32,500
+        td 1:1
+      tr 
+        td Grainger 
+        td $2,500
+        td 3:1
+      tr
+        td Johnson & Johnson
+        td $20000
+        td 2:1
+      tr 
+        td Bank of America
+        td $5000  
+        td 1:1  
+      tr
+        td American Express 
+        td $8000
+        td 2:1
+      tr 
+        td Deloitte 
+        td $32,500
+        td 1:1
+      tr 
+        td Grainger 
+        td $2,500
+        td 3:1
+      tr
+        td Johnson & Johnson
+        td $20000
+        td 2:1
+      tr 
+        td Bank of America
+        td $5000  
+        td 1:1  
+      tr
+        td American Express 
+        td $8000
+        td 2:1
+      tr 
+        td Deloitte 
+        td $32,500
+        td 1:1
+      tr 
+        td Grainger 
+        td $2,500
+        td 3:1
+      tr
+        td Johnson & Johnson
+        td $20000
+        td 2:1
+      tr 
+        td Bank of America
+        td $5000  
+        td 1:1  
+      tr
+        td American Express 
+        td $8000
+        td 2:1
+      tr 
+        td Deloitte 
+        td $32,500
+        td 1:1
+      tr 
+        td Grainger 
+        td $2,500
+        td 3:1
+      tr
+        td Johnson & Johnson
+        td $20000
+        td 2:1
+      
