--- a/donationSite/views/index.pug
+++ b/donationSite/views/index.pug
@@ -9,124 +9,10 @@ block main_content
         th Limit 
         th Ratio
     tbody
-      tr 
-        td Bank of America
-        td $5000  
-        td 1:1  
-      tr
-        td American Express 
-        td $8000
-        td 2:1
-      tr 
-        td Deloitte 
-        td $32,500
-        td 1:1
-      tr 
-        td Grainger 
-        td $2,500
-        td 3:1
-      tr
-        td Johnson & Johnson
-        td $20000
-        td 2:1
-      tr 
-        td Bank of America
-        td $5000  
-        td 1:1  
-      tr
-        td American Express 
-        td $8000
-        td 2:1
-      tr 
-        td Deloitte 
-        td $32,500
-        td 1:1
-      tr 
-        td Grainger 
-        td $2,500
-        td 3:1
-      tr
-        td Johnson & Johnson
-        td $20000
-        td 2:1
-      tr 
-        td Bank of America
-        td $5000  
-        td 1:1  
-      tr
-        td American Express 
-        td $8000
-        td 2:1
-      tr 
-        td Deloitte 
-        td $32,500
-        td 1:1
-      tr 
-        td Grainger 
-        td $2,500
-        td 3:1
-      tr
-        td Johnson & Johnson
-        td $20000
-        td 2:1
-      tr 
-        td Bank of America
-        td $5000  
-        td 1:1  
-      tr
-        td American Express 
-        td $8000
-        td 2:1
-      tr 
-        td Deloitte 
-        td $32,500
-        td 1:1
-      tr 
-        td Grainger 
-        td $2,500
-        td 3:1
-      tr
-        td Johnson & Johnson
-        td $20000
-        td 2:1
-      tr 
-        td Bank of America
-        td $5000  
-        td 1:1  
-      tr
-        td American Express 
-        td $8000
-        td 2:1
-      tr 
-        td Deloitte 
-        td $32,500
-        td 1:1
-      tr 
-        td Grainger 
-        td $2,500
-        td 3:1
-      tr
-        td Johnson & Johnson
-        td $20000
-        td 2:1
-      tr 
-        td Bank of America
-        td $5000  
-        td 1:1  
-      tr
-        td American Express 
-        td $8000
-        td 2:1
-      tr 
-        td Deloitte 
-        td $32,500
-        td 1:1
-      tr 
-        td Grainger 
-        td $2,500
-        td 3:1
-      tr
-        td Johnson & Johnson
-        td $20000
-        td 2:1
+      each company in companies
+        tr 
+          td #{company.name}
+          td $#{company.match_limit}
+          td #{company.ratio}
+      
       
